--- a/example/ui/package.json
+++ b/example/ui/package.json
@@ -17,11 +17,12 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
+    "o1js": "0.*",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-zk-shield": "^0.2.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "o1js": "0.*"
+    "typescript": "5.3.3"
   }
 }
