--- a/react-zk-shield/package.json
+++ b/react-zk-shield/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-zk-shield",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
+  "main": "lib/ZkShield.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npx babel src -d lib",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +34,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "typescript": "^5.3.3"
+  },
+  "files": [
+    "lib",
+    "src"
+  ]
 }
