--- a/example/ui/package.json
+++ b/example/ui/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-zk-shield": "^0.2.2",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zkshield": "^0.0.1"
   }
 }
