--- a/react-zkShield/package.json
+++ b/react-zkShield/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zkshield",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A react component for authenticating SPAs using Mina",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -9,7 +9,7 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
-    "rollup-build-lib": "rollup -c",
+    "rollup": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Whisper Key",
@@ -18,6 +18,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,5 +26,8 @@
     "rollup-plugin-dts": "^6.1.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "o1js": "^0.16.0"
   }
 }
