--- a/react-zkShield/package.json
+++ b/react-zkShield/package.json
@@ -1,15 +1,16 @@
 {
   "name": "zkshield",
-  "version": "0.0.1",
+  "version": "0.0.75",
   "description": "A react component for authenticating SPAs using Mina",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "type": "module",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts",
   "scripts": {
     "rollup-build-lib": "rollup -c",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Whisper Key",
@@ -18,6 +19,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,5 +27,8 @@
     "rollup-plugin-dts": "^6.1.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "o1js": "^0.16.0"
   }
 }
