--- a/react-zkShield/package.json
+++ b/react-zkShield/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "rollup-build-lib": "rollup -c",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Whisper Key",
   "license": "Apache-2.0",
@@ -19,12 +19,15 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.10.0",
     "rollup-plugin-dts": "^6.1.0",
+    "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
