--- a/react-zkShield/package.json
+++ b/react-zkShield/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zkshield",
-  "version": "0.2.35",
+  "version": "0.2.53",
   "description": "A react component for authenticating SPAs using Mina",
   "type": "module",
   "main": "dist/src/index.js",
@@ -22,6 +22,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
+    "copyfiles": "^2.4.1",
+    "cpy": "^11.0.0",
     "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
