--- a/example/ui/package.json
+++ b/example/ui/package.json
@@ -24,6 +24,9 @@
     "react-zk-shield": "^0.2.2",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
-    "zkshield": "^0.3.278"
+    "zkshield": "^0.3.314"
+  },
+  "devDependencies": {
+    "daisyui": "^4.7.3"
   }
 }
